# project_gyan

./: .dockerignore  .env  .gitignore  IMPLEMENTATION.md  README.md  commands.md  docker-compose.yml  pyproject.toml  requirements.txt  trigger_test.py
services/api_setu/: Dockerfile  database.py  main.py  requirements.txt  schemas.py
services/engine_astra/: Dockerfile  advanced_risk.py  ai_catalyst.py  ai_models.py  alembic.ini  backtest_engine.py  backtest_scenario.py  broker_adapter.py  chanakya_agent.py  config_selector.py  database.py  debug_ai_log.txt  explainability.py  fundamental_analysis.py  market_regime.py  news_analysis.py  oms.py  requirements.txt  risk_manager.py  rules_engine.py  run_backtest.py  stock_list.py  strategy_registry.py  tasks.py  technical_analysis.py  test_backtest_manual.py  test_results.txt  tuning.py  verify_enhanced.py  wait-for-postgres.sh
services/engine_astra/alembic/: env.py
services/engine_astra/alembic/versions/: 06131515d986_max_power_upgrade.py  4cdd6ccc9828_add_catalyst_event_table.py  63333debbbd2_add_sector_performance.py  862565cd728e_create_full_schema.py  90c541e56c9d_create_initial_tables.py  983c1406a27e_institutional_upgrade.py  e990b8fd1380_add_risk_scores.py  (+5 more)
services/frontend_darpan/: Dockerfile  app.py  portfolio.json  requirements.txt
services/worker_chakra/: Dockerfile  celerybeat-schedule  live_feed.py  market_replay.py  reconciliation.py  tasks.py
shared/: costs.py  database.py  fundamental_analysis.py  news_analysis.py  news_utils.py  portfolio_opt.py  sector_analysis.py  stock_list.py  test_run.py
