[tool.poetry]
name = "project-gyan"
version = "0.1.0"
description = "AI Investment Decision Support System"
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.11"

# Core
pandas = "*"
numpy = "*"

# Database
sqlalchemy = "*"
psycopg2-binary = "*"

# API
fastapi = "*"
uvicorn = {extras = ["standard"], version = "*"}

# Worker
celery = "*"
redis = "*"

# AI & Data
yfinance = "*"
ta = "*"
prophet = "*"
scikit-learn = "*"
tensorflow = "*"

# Frontend
streamlit = "*"
requests = "*"
plotly = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"